-- AlterTable
ALTER TABLE "giga_link_activation" ADD COLUMN "manually_inactivated" BOOLEAN NOT NULL DEFAULT false;
