// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
  output   = "../../../../node_modules/@prisma/application"
}

datasource db {
  provider = "postgresql"
  url      = env("APP_DATABASE_URL")
}

generator dbml {
  provider            = "prisma-dbml-generator"
  output              = "./dbml"
  outputName          = "giga-nft-model.dbml"
  projectName         = "GIGA NFT 2.0"
  projectDatabaseType = "PostgreSQL"
  projectNote         = "GIGA NFT 2.0"
}

generator docs {
  provider = "node node_modules/prisma-docs-generator"
  output   = "./docs"
}

enum Role {
  ADMIN
  CONTRIBUTOR
}

enum Permissions {
  READ
  WRITE
  UPDATE
  DELETE
  MANAGE
  SCHOOL_UPDATE
  SCHOOL_READ
  DATA_VALID
  USER_UPDATE
  DATA_CONTRIBUTE
}

enum SchoolStatus {
  Open
  Closed
}

enum Type {
  Private
  Public
}

enum Level {
  Primary
  Secondary
  Higher_Secondary
  Unkown
}

enum Status {
  Validated
  Rejected
  Pending
}

enum ContributionType {
  VOTE
  CONTRIBUTE
}

enum MintStatus {
  NOTMINTED
  MINTED
  ISMINTING
}

enum ActivationStatus {
  ACTIVE
  INACTIVE
  EXPIRED
}

enum ContributorNameType{
  REGULAR
  ENS
  WALLET
  NONE
}

enum ImageGenerationStatus{
  NOT_STARTED
  IN_PROGRESS
  FAILED
  SUCESS
}

model Auth {
  id           String    @id @default(uuid())
  otp          String    @unique
  refreshToken String?
  accessToken  String?
  user         User      @relation(fields: [id], references: [id])
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt
  deletedAt    DateTime?
}

model Roles {
  role_id     String       @id @default(uuid())
  permissions Permission[]
  name        Role         @unique
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  deletedAt   DateTime?
  isArchived  Boolean      @default(false)

  @@map(name: "giga_roles")
}

model Permission {
  id         String      @id @default(uuid())
  action     Permissions @unique
  subject    String
  conditions String
  reason     String
  role_id    String
  Roles      Roles       @relation(fields: [role_id], references: [role_id])
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  deletedAt  DateTime?
  isArchived Boolean     @default(false)

  @@map(name: "giga_permissions")
}

model User {
  id                String            @id @default(uuid())
  name              String
  email             String?           @unique
  walletAddress     Bytes?            @unique
  profileImage      String?
  isActive          Boolean           @default(true)
  isBlocked         Boolean           @default(false)
  lastLoggedIn      DateTime?         @default(now())
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt
  deletedAt         DateTime?
  ContributedData   ContributedData[]
  ValidatedUser     ContributedData[] @relation("ValidatedBy")
  ApprovedBy        ContributedData[] @relation("ApprovedBy")
  Auth              Auth[]
  roles             Role[]
  schools           School[]
  schoolUpdatedBy   School[]          @relation("UpdatedBy")
  isArchived        Boolean           @default(false)
  validatedBy       validatedData[]   @relation("ApprovedBy")
  OTP               OTP[]
  linkActivatedBy   ActivationLog[]   @relation("ActivatedBy")
  linkDeactivatedBy ActivationLog[]   @relation("DeactivatedBy")
  FeatureCountry    FeatureCountry[]
  User              Contributor[]

  @@map("giga_users")
}

model SchoolVersion {
  id           String   @id @default(uuid())
  country_code String   @db.VarChar(3)
  version      Int
  last_updated DateTime @default(now())
  School       School?  @relation(fields: [schoolId], references: [id])
  schoolId     String?

  @@unique([country_code, version])
  @@map("school_version")
}

model School {
  id                    String            @id @unique @map("id")  
  giga_school_id        String            @unique
  status                SchoolStatus      @default(Open)
  connectivity          Boolean           @default(false)
  name                  String
  school_type           String
  electricity_available Boolean           @default(false)
  country               String
  region_name           String?
  longitude             Float
  latitude              Float
  minted                MintStatus        @default(NOTMINTED)
  coverage_availability Boolean           @default(false)
  giga_maps_data        Json?
  imageHash             String?
  schoolReserved        Boolean           @default(false)
  schoolClaimed         Boolean           @default(false)
  imageUpdated          Boolean           @default(false)
  imageUpdating         Boolean           @default(false)
  imageGeneration       ImageGenerationStatus @default(NOT_STARTED)
  createdAt             DateTime          @default(now())
  updatedAt             DateTime          @updatedAt
  deletedAt             DateTime?
  createdBy             User?             @relation(fields: [createdById], references: [id])
  createdById           String?
  isArchived            Boolean           @default(false)
  updatedBy             String?
  updatedUser           User?             @relation("UpdatedBy", fields: [updatedBy], references: [id])
  uploadId              String?
  uploadBatch           CSVUpload?        @relation(fields: [uploadId], references: [id])
  validatedData         validatedData[]
  ContributedData       ContributedData[]
  version_id            String
  School_Version        SchoolVersion[]
  verifiedCIW           Boolean      @default(false)

  themeId String?
  theme   Theme?  @relation(fields: [themeId], references: [id])

  reservation            ContributorSchoolReservation ?

  @@index(fields: [name], type: Gist)
  @@index(fields: [minted], type: Hash)
  @@index(fields: [country, region_name, id])
  @@index([giga_maps_data("water_availability")], type: Gin, map: "idx_school_giga_maps_water_availability")
  @@index([giga_maps_data("num_teachers")], type: Gin, map: "idx_school_giga_maps_num_teachers")
  @@index([giga_maps_data("num_students")], type: Gin, map: "idx_school_giga_maps_num_students")
  @@index([giga_maps_data("num_computers")], type: Gin, map: "idx_school_giga_maps_num_computers")
  @@index([giga_maps_data("download_speed_benchmark")], type: Gin, map: "idx_school_giga_maps_download_speed")
  @@index([giga_maps_data("connectivity_type")], type: Gin, map: "idx_school_giga_maps_connectivity_type")
  @@map("giga_school")
}


model SchoolActivationDetails{
  id                       String     @id @default(uuid())
  schoolId                 String     @unique()
  transactionHash          String     @unique()
  themeId                  String
  contributorData          Json
  schoolUpdated            Boolean     @default(false)
  transactionStatus        Int ?   
  createdAt                DateTime    @default(now())
  updatedAt                DateTime?    @updatedAt  
  deletedAt                DateTime?

  @@map("giga_school_activation")

}

model ContributedData {
  id                String    @id @default(uuid())
  contributed_data  Json
  status            Status    @default(Pending)
  school_Id         String
  school            School    @relation(fields: [school_Id], references: [id])
  contributedUserId String
  contributedUser   User      @relation(fields: [contributedUserId], references: [id])
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
  approvedBy        String?
  approved          User?     @relation("ApprovedBy", fields: [approvedBy], references: [id])
  deletedAt         DateTime?
  approvedAt        DateTime?
  isArchived        Boolean   @default(false)
  validatedBy       String?
  validatedAt       DateTime?
  validatedUser     User?     @relation("ValidatedBy", fields: [validatedBy], references: [id])

  @@index(fields: [school_Id, contributedUserId])
  @@map("giga_contributed_data")
}

model CSVUpload {
  id         String   @id @default(uuid())
  uploadedBy String
  fileValue  Json
  fileName   String
  school     School[]
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@map("giga_csv_uploads")
}

model validatedData {
  id               String    @id @default(uuid())
  school_Id        String
  school           School    @relation(fields: [school_Id], references: [id])
  data             Json
  approvedStatus   Boolean   @default(false)
  inProgressStatus Boolean   @default(false)
  createdAt        DateTime? @default(now())
  updatedAt        DateTime? @updatedAt
  deletedAt        DateTime?
  approvedBy       String?
  approved         User?     @relation("ApprovedBy", fields: [approvedBy], references: [id])
  approvedAt       DateTime?
  contributed_data String[]
  isArchived       Boolean   @default(false)

  @@index(fields: [school_Id])
  @@map("giga_validated_data")
}

model OTP {
  id             String    @id @default(uuid())
  otp            String    @unique
  userId         String    @unique
  user           User      @relation(fields: [userId], references: [id])
  validated      Boolean   @default(false)
  expirationTime DateTime
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt
  deletedAt      DateTime?

  @@map("giga_otp")
}

model magicLinkOtp {
  id             String    @id @default(uuid())
  otp            String    @unique
  email          String    @unique
  validated      Boolean   @default(false)
  expirationTime DateTime
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt
  deletedAt      DateTime?

  @@map("giga_magic_link_otp")
}

model Theme {
  id          String    @id @default(uuid())
  colorScheme Json
  name        String    @unique
  schools     School[]
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  deletedAt   DateTime?
  isArchived  Boolean   @default(false)

  @@map("giga_themes")
}

model Qos {
  id                   String    @id @default(uuid())
  timestamp            DateTime
  country_id           String
  giga_school_id       String
  speed_download       String
  speed_upload         String
  inbound_traffic      String?
  outbound_traffic     String?
  speed_upload_max     String?
  speed_upload_mean    String?
  provider             String?
  speed_download_max   String?
  speed_download_mean  String?
  latency              String
  signature            String
  gigasync_id          String
  date                 DateTime?
  dynamicData          Json
  inbound_traffic_sum  String?
  outbound_traffic_sum String?
  createdAt            DateTime  @default(now())
  updatedAt            DateTime  @updatedAt
  deletedAt            DateTime?

  @@map("giga_qos")
}

model ArweaveHash {
  id          String    @id @default(uuid())
  date        DateTime  @unique
  arweaveHash String[]
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  deletedAt   DateTime?

  @@map("giga_arweave_data")
}

model ActivationLog {
  id              String           @id @default(uuid())
  status          ActivationStatus @default(INACTIVE)
  activatedBy     String
  name            String
  manually_inactivated Boolean         @default(false)
  activatedUser   User             @relation("ActivatedBy", fields: [activatedBy], references: [id])
  deActivatedBy   String?
  deActivatedUser User?            @relation("DeactivatedBy", fields: [deActivatedBy], references: [id])
  startDate       DateTime
  endDate         DateTime?
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt

  @@map("giga_link_activation")
}

/// userId map 
/// add the nft related data only in this
model Contributor {
  id             String   @id @default(uuid())
  userId         String   @unique
  user           User?    @relation(fields: [userId], references: [id])
  totalNftMinted Int
  name           String?
  nameType       ContributorNameType @default(NONE)
  schoolReservation ContributorSchoolReservation[]
  isVisible      Boolean  @default(false)
  nftReserved    Boolean  @default(false)
  nftClaimed     Boolean  @default(false)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt


  @@map("giga_contributor")
}


model ContributorSchoolReservation {
  id                String        @id @default(uuid())
  contributorId     String
  contributor       Contributor   @relation(fields:[contributorId], references:[id])
  schoolId          String        @unique 
  school            School        @relation(fields:[schoolId], references:[id])
  reservedAt        DateTime      @default(now())
  updatedAt         DateTime      @updatedAt
  deletedAt         DateTime?

  @@unique([contributorId, schoolId])
  @@map("giga_contributor_reservation")
}



model FeatureCountry {
  id            String   @id @default(uuid())
  country_code  String   @unique
  details       String? 
  isFeatured    Boolean
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  createdBy     String
  createdByUser User     @relation(fields: [createdBy], references: [id])

  @@map("giga_featured")
}


model SessionId{
  id          String   @id @default(uuid())
  schoolId    String
  status      Boolean @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  requestDetails Json

  @@map("giga_id_session_id") 
}

model InformationWorker{
  id     String   @id @default(uuid())
  did    String @unique
  name   String ?
  emailSent Boolean @default(false)
  email  String @unique
  isArchived  Boolean @default(false)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@map("giga_ciw")
}