//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "GIGA NFT 2.0" {
  database_type: 'PostgreSQL'
  Note: 'GIGA NFT 2.0'
}

Table Auth {
  id String [pk]
  otp String [unique, not null]
  refreshToken String
  accessToken String
  user giga_users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table giga_roles {
  role_id String [pk]
  permissions giga_permissions [not null]
  name Role [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isArchived Boolean [not null, default: false]
}

Table giga_permissions {
  id String [pk]
  action Permissions [unique, not null]
  subject String [not null]
  conditions String [not null]
  reason String [not null]
  role_id String [not null]
  Roles giga_roles [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isArchived Boolean [not null, default: false]
}

Table giga_users {
  id String [pk]
  name String [not null]
  email String [unique]
  walletAddress Bytes [unique]
  profileImage String
  isActive Boolean [not null, default: true]
  isBlocked Boolean [not null, default: false]
  lastLoggedIn DateTime [default: `now()`]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  ContributedData giga_contributed_data [not null]
  ValidatedUser giga_contributed_data [not null]
  ApprovedBy giga_contributed_data [not null]
  Auth Auth [not null]
  roles Role[] [not null]
  schools giga_school [not null]
  schoolUpdatedBy giga_school [not null]
  isArchived Boolean [not null, default: false]
  validatedBy giga_validated_data [not null]
  OTP giga_otp [not null]
  linkActivatedBy giga_link_activation [not null]
  linkDeactivatedBy giga_link_activation [not null]
  FeatureCountry giga_featured [not null]
  User giga_contributor [not null]
}

Table school_version {
  id String [pk]
  country_code String [not null]
  version Int [not null]
  last_updated DateTime [default: `now()`, not null]
  School giga_school
  schoolId String

  indexes {
    (country_code, version) [unique]
  }
}

Table giga_school {
  id String [pk]
  giga_school_id String [unique, not null]
  status SchoolStatus [not null, default: 'Open']
  connectivity Boolean [not null, default: false]
  name String [not null]
  school_type String [not null]
  electricity_available Boolean [not null, default: false]
  country String [not null]
  region_name String
  longitude Float [not null]
  latitude Float [not null]
  minted MintStatus [not null, default: 'NOTMINTED']
  coverage_availability Boolean [not null, default: false]
  giga_maps_data Json
  imageHash String
  schoolReserved Boolean [not null, default: false]
  schoolClaimed Boolean [not null, default: false]
  imageUpdated Boolean [not null, default: false]
  imageUpdating Boolean [not null, default: false]
  imageGeneration ImageGenerationStatus [not null, default: 'NOT_STARTED']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  createdBy giga_users
  createdById String
  isArchived Boolean [not null, default: false]
  updatedBy String
  updatedUser giga_users
  uploadId String
  uploadBatch giga_csv_uploads
  validatedData giga_validated_data [not null]
  ContributedData giga_contributed_data [not null]
  version_id String [not null]
  School_Version school_version [not null]
  verifiedCIW Boolean [not null, default: false]
  themeId String
  theme giga_themes
  reservation giga_contributor_reservation
}

Table giga_school_activation {
  id String [pk]
  schoolId String [unique, not null]
  transactionHash String [unique, not null]
  themeId String [not null]
  contributorData Json [not null]
  schoolUpdated Boolean [not null, default: false]
  transactionStatus Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  deletedAt DateTime
}

Table giga_contributed_data {
  id String [pk]
  contributed_data Json [not null]
  status Status [not null, default: 'Pending']
  school_Id String [not null]
  school giga_school [not null]
  contributedUserId String [not null]
  contributedUser giga_users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  approvedBy String
  approved giga_users
  deletedAt DateTime
  approvedAt DateTime
  isArchived Boolean [not null, default: false]
  validatedBy String
  validatedAt DateTime
  validatedUser giga_users
}

Table giga_csv_uploads {
  id String [pk]
  uploadedBy String [not null]
  fileValue Json [not null]
  fileName String [not null]
  school giga_school [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table giga_validated_data {
  id String [pk]
  school_Id String [not null]
  school giga_school [not null]
  data Json [not null]
  approvedStatus Boolean [not null, default: false]
  inProgressStatus Boolean [not null, default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  approvedBy String
  approved giga_users
  approvedAt DateTime
  contributed_data String[] [not null]
  isArchived Boolean [not null, default: false]
}

Table giga_otp {
  id String [pk]
  otp String [unique, not null]
  userId String [unique, not null]
  user giga_users [not null]
  validated Boolean [not null, default: false]
  expirationTime DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table giga_magic_link_otp {
  id String [pk]
  otp String [unique, not null]
  email String [unique, not null]
  validated Boolean [not null, default: false]
  expirationTime DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table giga_themes {
  id String [pk]
  colorScheme Json [not null]
  name String [unique, not null]
  schools giga_school [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isArchived Boolean [not null, default: false]
}

Table giga_qos {
  id String [pk]
  country_id String [not null]
  giga_school_id String [not null]
  download_speed String [not null]
  upload_speed String [not null]
  latency String
  date DateTime
  country_iso3_code String [not null]
  arewaveUploaded Boolean [not null, default: false]
  dynamicData Json [not null]
  data_source String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table giga_arweave_data {
  id String [pk]
  date DateTime [not null]
  arweaveHash String [not null]
  country_id String [not null]
  onChainUpdated Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table giga_link_activation {
  id String [pk]
  status ActivationStatus [not null, default: 'INACTIVE']
  activatedBy String [not null]
  name String [not null]
  manually_inactivated Boolean [not null, default: false]
  activatedUser giga_users [not null]
  deActivatedBy String
  deActivatedUser giga_users
  startDate DateTime [not null]
  endDate DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table giga_contributor {
  id String [pk]
  userId String [unique, not null]
  user giga_users
  totalNftMinted Int [not null]
  name String
  nameType ContributorNameType [not null, default: 'NONE']
  schoolReservation giga_contributor_reservation [not null]
  isVisible Boolean [not null, default: false]
  nftReserved Boolean [not null, default: false]
  nftClaimed Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  Note: 'userId map 
add the nft related data only in this'
}

Table giga_contributor_reservation {
  id String [pk]
  contributorId String [not null]
  contributor giga_contributor [not null]
  schoolId String [unique, not null]
  school giga_school [not null]
  reservedAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (contributorId, schoolId) [unique]
  }
}

Table giga_featured {
  id String [pk]
  country_code String [unique, not null]
  details String
  isFeatured Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdBy String [not null]
  createdByUser giga_users [not null]
}

Table giga_id_session_id {
  id String [pk]
  schoolId String [not null]
  status Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  requestDetails Json [not null]
}

Table giga_ciw {
  id String [pk]
  did String [unique, not null]
  name String
  emailSent Boolean [not null, default: false]
  email String [unique, not null]
  isArchived Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Role {
  ADMIN
  CONTRIBUTOR
}

Enum Permissions {
  READ
  WRITE
  UPDATE
  DELETE
  MANAGE
  SCHOOL_UPDATE
  SCHOOL_READ
  DATA_VALID
  USER_UPDATE
  DATA_CONTRIBUTE
}

Enum SchoolStatus {
  Open
  Closed
}

Enum Type {
  Private
  Public
}

Enum Level {
  Primary
  Secondary
  Higher_Secondary
  Unkown
}

Enum Status {
  Validated
  Rejected
  Pending
}

Enum ContributionType {
  VOTE
  CONTRIBUTE
}

Enum MintStatus {
  NOTMINTED
  MINTED
  ISMINTING
}

Enum ActivationStatus {
  ACTIVE
  INACTIVE
  EXPIRED
}

Enum ContributorNameType {
  REGULAR
  ENS
  WALLET
  NONE
}

Enum ImageGenerationStatus {
  NOT_STARTED
  IN_PROGRESS
  FAILED
  SUCESS
}

Ref: Auth.id > giga_users.id

Ref: giga_permissions.role_id > giga_roles.role_id

Ref: school_version.schoolId > giga_school.id

Ref: giga_school.createdById > giga_users.id

Ref: giga_school.updatedBy > giga_users.id

Ref: giga_school.uploadId > giga_csv_uploads.id

Ref: giga_school.themeId > giga_themes.id

Ref: giga_contributed_data.school_Id > giga_school.id

Ref: giga_contributed_data.contributedUserId > giga_users.id

Ref: giga_contributed_data.approvedBy > giga_users.id

Ref: giga_contributed_data.validatedBy > giga_users.id

Ref: giga_validated_data.school_Id > giga_school.id

Ref: giga_validated_data.approvedBy > giga_users.id

Ref: giga_otp.userId > giga_users.id

Ref: giga_link_activation.activatedBy > giga_users.id

Ref: giga_link_activation.deActivatedBy > giga_users.id

Ref: giga_contributor.userId > giga_users.id

Ref: giga_contributor_reservation.contributorId > giga_contributor.id

Ref: giga_contributor_reservation.schoolId - giga_school.id

Ref: giga_featured.createdBy > giga_users.id